--- a/kinomart/admin/templates/admin/userlist.html
+++ b/kinomart/admin/templates/admin/userlist.html
@@ -32,16 +32,16 @@
                     <td>{{user.phone}}</td>
                     <td>{{user.email}}</td>
                     {% if user.is_active == True %}
-                    <td>Active {{user.is_active}}   </td>
+                    <td>Active</td>
                     <td>
                         
-                        <a href="/admin/block/{{ user.id }}" style="margin-left: 20px;" onclick="return confirm('Are you sure? want to block this user?');"><i title="Block User" class="fa-solid fa-user-lock" style="color: #cd1354;"></i></a>
+                        <a href="/admin/block/{{ user.id }}" class="btn btn-outline-danger btn-sm " style="margin-left: 40px;" onclick="return confirm('Are you sure? want to block this user?');">Block</a>
                     </td>
                         
                     {% else %}
                     <td>Blocked</td>
                     <td>
-                        <a href="unblock/{{ user.id }}" style="margin-left: 20px;" onclick="return confirm('Are you sure? you want to unblock this user?');"><i title="Unblock User" class="fa-regular fa-user" style="color: green;"></i></a>
+                        <a href="unblock/{{ user.id }}" class="btn btn-outline-success btn-sm " style="margin-left: 40px;" onclick="return confirm('Are you sure? you want to unblock this user?');">Unblock</a>
                     </td> 
                     {% endif %}
                     
