--- a/kinomart/user/templates/user/cart.html
+++ b/kinomart/user/templates/user/cart.html
@@ -215,6 +215,7 @@
           <div class="modal-footer">
 
             <input type="hidden" name="total_price" value="{{total}}">
+            <input type="hidden" name="address_id" value="{{address.id}}">
           <button type="submit" id="" class="btn btn-primary">Confirm Order</button>
 
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
