--- a/kinomart/admin/templates/admin/admin_theme.html
+++ b/kinomart/admin/templates/admin/admin_theme.html
@@ -67,7 +67,7 @@
                             <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav">
                                     <a class="nav-link" href="{% url 'list_product' %}">
-                                        <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></i></div>
+                                        <div class="sb-nav-link-icon"><i class="fa-solid fa-list"></i></div>
                                         View Products
                                     </a>
                                     <a class="nav-link" href="{% url 'add_product' %}">
@@ -81,6 +81,11 @@
                                 <div class="sb-nav-link-icon"><i class="fa-solid fa-layer-group"></i>
                                 </div>
                                 Categories
+                            </a>
+                            <a class="nav-link" href="{% url 'admin_orders' %}">
+                                <div class="sb-nav-link-icon"><i class="fa-solid fa-box"></i>
+                                </div>
+                                Orders
                             </a>
                             <div class="sb-sidenav-menu-heading">Interface</div>
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
