--- a/kinomart/kinomart/templates/adm_temp_files/css/styles.css
+++ b/kinomart/kinomart/templates/adm_temp_files/css/styles.css
@@ -20,6 +20,12 @@
   margin-top: -1px;
 }
 
+
+.scrollable-table {
+  overflow-x: auto;
+}
+
+
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
