--- a/kinomart/user/templates/user/order_history.html
+++ b/kinomart/user/templates/user/order_history.html
@@ -54,7 +54,7 @@
                     </p>
                     {% elif order.status == 'Dispatched' %}
                     <p>Status: <span style="color: rgb(199, 108, 4);">{{ order.status }}</span>
-                        <button class="btn btn-danger btn-sm" style="margin-left: 15px;">cancel order</button>
+                        <!-- <button class="btn btn-danger btn-sm" style="margin-left: 15px;">cancel order</button> -->
                     </p>
                     {% else %}
                     <p>Status: <span style="color: rgb(52, 208, 13);">{{ order.status }}</span>
