test payment is working, pay with razorpay is on another page now.

--- a/kinomart/user/templates/user/success.html
+++ b/kinomart/user/templates/user/success.html
@@ -16,7 +16,7 @@
     <div class="alert alert-Success alert-dismissible fade show" role="alert">
         <!-- {% for message in messages %}
            {{message}} -->
-           <h2 style="margin-left: 50px; color:rgb(0, 114, 19);">Order Placed Successfully</h2>
+           
 
         <!-- {% endfor %} -->
        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -32,8 +32,12 @@
     <!-- image section started -->
     <div class="col-md-5">
 
-       
-       <a href="{% url 'home' %}"> <img style="width: 100%;" src="{% static 'img/order.jpg' %}" alt="Order Placed"></a>
+        <h2 style="margin-left: 50px; color:rgb(0, 114, 19);">
+            {% if status %}
+            Order Placed Successfully
+            {% else %}error{% endif %}
+            </h2>
+       <a href="{% url 'home' %}"> <img style="width: 95%;" src="{% static 'img/order.jpg' %}" alt="Order Placed"></a>
     
     
 
