--- a/kinomart/user/templates/user/cart.html
+++ b/kinomart/user/templates/user/cart.html
@@ -210,6 +210,9 @@
               <input type="text" class="form-control" id="instructions" name="instructions" placeholder="Preffered time for delivery or any other instructions">
           </div>
           
+
+          
+        
           
           <!-- Add more fields as needed -->
           <div class="modal-footer">
@@ -230,6 +233,49 @@
 
 
 
+
+<!-- model for razorpay -->
+<div class="modal fade" id="razorpay" tabindex="-1" role="dialog" aria-labelledby="razorpayLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+      <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Choose payment gateway</h5>
+          <button type="button" class="close bg-danger text-white" style="border-radius: 3px; border: hidden;" data-bs-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+          </button>
+      </div>
+      <div class="modal-body">
+          <!-- Your form goes here -->
+          <form action="{% url 'payment_status' %}" method="POST">
+
+            {% csrf_token %}
+            
+        <script
+            src="https://checkout.razorpay.com/v1/checkout.js"
+            data-key="rzp_test_b714EP5tPrXbn2"
+            data-amount="{{order.total_price}}"
+            data-currency="INR"
+            data-order_id="{{order.order_id}}"
+            data-buttontext="Pay with Razorpay"
+            data-name="Kino Mart Grocery"
+            data-description="Compleate Grocery Store"
+            data-image="https://example.com/your_logo.jpg"
+            data-prefill.name="{{order.user}}"
+            data-prefill.email="abc@ss.com"
+            data-theme.color="#F37254"
+        ></script>
+        <input type="hidden" custom="Hidden Element" name="hidden"/>
+        </form>
+          
+      </div>
+      
+      </div>
+  </div>
+</div>
+
+
+
+
                
 <style>
   .table td {
@@ -240,6 +286,14 @@
 {% endblock %}
 
 {% block scripts %}
+{% if show_checkout_modal %}
+<script>
+$(document).ready(function(){
+    $("#razorpay").modal('show');
+});
+</script>
+{% endif %}
+
 <script>
 $(".btn-minus").on('click', function() {
   var cartid = $(this).data('cartid');
