--- a/kinomart/admin/templates/admin/admin_theme.html
+++ b/kinomart/admin/templates/admin/admin_theme.html
@@ -16,6 +16,7 @@
 <link href="{% static 'adm_temp_files/css/styles.css' %}" rel="stylesheet" />
 <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 <!-- trying to change table js library
@@ -213,7 +214,7 @@
         
     </body>
 </html>
-<style>
+<!-- <style>
     select {
         width: 200px;
         padding: 10px;
@@ -225,4 +226,4 @@
     select:focus {
         outline: none;
     }
-</style>
+</style> -->
