--- a/kinomart/admin/templates/admin/coupon.html
+++ b/kinomart/admin/templates/admin/coupon.html
@@ -22,39 +22,41 @@
 
       
     <div class="card-body">
-    <a class="btn btn-primary" href="{% url 'add_product' %}">Add Coupon</a>
+        <button data-bs-toggle="modal" data-bs-target="#add_coupon" class="btn border-secondary rounded-pill  text-primary  " type="button">Add Coupon</button>
+    
 
         <table id="datatablesSimple">
             <thead>
                 <tr>
-                    <th>Product ID</th>
-                    <th>Name</th>
-                    <th>Category</th>
-                    <th>Description</th>
-                    <th>Brand</th>
-                    <th>Stock Bal</th>
-                    <th>Price</th>
-                    <th>Image</th>
-                    <th>Actions</th>
-                </tr>
+                    <th>ID</th>
+                    <th>Code</th>
+                    <th>Expiry Date</th>
+                    <th>Balance Count</th>
+                    <th>Discount %</th>
+                    <th>Min Purchase</th>
+                    <th>Edit/ Delete</th>
             </thead>
             <tfoot>
                 
             </tfoot>
             <tbody>
-                {% for variant in variants %}
+                {% for coupon in coupons %}
                 <tr>
-                    <td>{{variant.id}}</td>
-                    <td>{{variant.name}}</td>
-                    <td>{{variant.category}}</td>
-                    <td>{{variant.description}}</td>
-                    <td>{{variant.brand}}</td>
-                    <td>{{variant.stock}}</td>
-                    <td>{{variant.price}}</td>
-                    <td><img src="{{variant.image}}" style="height: 50px;" alt=""></td>
-                    <td><a href="{% url 'edit_product' variant.id %}" title="edit" class="btn btn-sm  btn-outline-secondary " ><i class="fa-solid fa-pencil"></i></a>
-                        <a href="{% url 'hold_product' variant.id %}" title="hold" class="btn btn-sm btn-close btn-outline-danger"></a></td>
-                       
+                    <td>{{coupon.id}}</td>
+                    <td>{{coupon.coupon_code}}</td>
+                    <td>{{coupon.expiry_date}}</td>
+                    <td>{{coupon.count}}</td>
+                    <td>{{coupon.discount_percentage}}</td>
+                    <td>{{coupon.min_order}}</td>
+                    <td>
+                        <button data-id="{{coupon.id}}" 
+                        data-code="{{coupon.coupon_code}}" 
+                        data-count="{{coupon.count}}"
+                        data-expiry="{{coupon.expiry_date}}"
+                        data-min_order="{{coupon.min_order}}"
+                        data-discount="{{coupon.discount_percentage}}" title="edit" class="btn btn-sm  btn-outline-secondary edit-btn" ><i class="fa-solid fa-pencil"></i></button>
+                        <a href="" title="hold" class="btn btn-sm btn-close btn-outline-danger"></a></td>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -62,14 +64,185 @@
     </div>
 </div>
 
+
+
+
+
+
+<!-- model for add coupon form -->
+
+<div class="modal fade" id="add_coupon" tabindex="-1" role="dialog" aria-labelledby="add_couponLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Add Coupon</h5>
+            <button type="button" class="close bg-danger text-white" style="border-radius: 3px; border: hidden;" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+            </button>
+        </div>
+        <div class="modal-body">
+
+
+
+
+            <!-- Your form goes here -->
+            <form class="checkout-form" action="{% url 'add_coupon' %}" method="post">
+            {% csrf_token %}
+            
+            
+            <div class="form-group">
+                <label for="instructions">Coupon Code</label>
+                <input type="text" class="form-control" id="coupon_code" name="coupon_code" placeholder="Create a new code">
+            </div>
+            <div class="form-group">
+                <label for="instructions">Maximum total use</label>
+                <input type="number" class="form-control" id="count" name="count" placeholder="">
+            </div>
+            <div class="form-group">
+                <label for="instructions">Expiry Date</label>
+                <input type="date" class="form-control" id="expiry_date" name="expiry_date" placeholder="">
+            </div>
+  
+            <div class="form-group">
+                <label for="instructions">Minimum required order</label>
+                <input type="number" step="0.01" class="form-control" id="min_order" name="min_order" placeholder="">
+            </div>
+
+            <div class="form-group">
+                <label for="instructions">Discount Percentage</label>
+                <input type="number" step="0.01" min="0" max="100" class="form-control" id="discount_percentage" name="discount_percentage" placeholder="">
+            </div>
+  
+          
+            
+        
+            <div class="modal-footer">
+  
+            <button type="submit" id="" class="btn btn-primary">Create</button>
+  
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+            </form>
+        </div>
+        
+        </div>
+    </div>
+  </div>
+
+
+
+  <!-- model for editing coupon -->
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="add_couponLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Edit Coupon</h5>
+            <button type="button" class="close bg-danger text-white" style="border-radius: 3px; border: hidden;" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+            </button>
+        </div>
+        <div class="modal-body">
+
+
+
+
+            <!-- Your form goes here -->
+            <form id="editForm" action="{% url 'edit_coupon' %}" method="post">
+
+                {% csrf_token %}
+                    
+                    
+                    <div class="form-group">
+                        <label for="instructions">Coupon Code</label>
+                        <input type="text" class="form-control" id="coupon_code_id" name="coupon_code" >
+                    </div>
+                    <div class="form-group">
+                        <label for="instructions">Maximum total use</label>
+                        <input type="number" class="form-control" id="count_id" name="count" >
+                    </div>
+                    <div class="form-group">
+                        <label for="instructions">Expiry Date</label>
+                        <input type="date" class="form-control" id="expiry_date_id" name="expiry_date" placeholder="">
+                    </div>
+          
+                    <div class="form-group">
+                        <label for="instructions">Minimum required order</label>
+                        <input type="number" step="0.01" class="form-control" id="min_order_id" name="min_order" placeholder="">
+                    </div>
+        
+                    <div class="form-group">
+                        <label for="instructions">Discount Percentage</label>
+                        <input type="number" step="0.01" min="0" max="100" class="form-control" id="discount_percentage_id" name="discount_percentage" placeholder="">
+                    </div>
+          
+                
+                    <div class="modal-footer">
+                        <input type="hidden" id="coupon-id" name="coupon-id">
+                    <button type="submit" id="" class="btn btn-primary">Edit</button>
+          
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                
+              </form>
+        </div>
+        
+        </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% endblock %}
+
+{% block scripts %}
 <script>
     $(document).ready(function(){
-      $('.dropdown-submenu a.test').on("click", function(e){
-        $(this).next('ul').toggle();
-        e.stopPropagation();
-        e.preventDefault();
-      });
+        $(".edit-btn").click(function() {
+        
+        var id = $(this).data('id');
+        var code = $(this).data('code');
+        var count = $(this).data('count');
+        var expiry = $(this).data('expiry');
+        var min_order = $(this).data('min_order');
+        var discount = $(this).data('discount');
+        var date = new Date(expiry);
+        var year = date.getFullYear();
+        var month = ("0" + (date.getMonth() + 1)).slice(-2); // Months are zero indexed
+        var day = ("0" + date.getDate()).slice(-2);
+    
+        var formattedDate = year + '-' + month + '-' + day; // "2024-04-10"
+    
+        
+    
+        // Populate the form fields
+        $("#coupon-id").val(id);
+        $("#coupon_code_id").val(code);
+        $("#count_id").val(count);
+        $("#expiry_date_id").val(formattedDate);
+        $("#min_order_id").val(min_order);
+        $("#discount_percentage_id").val(discount);
+    
+        // Show the modal
+        var editModal = new bootstrap.Modal(document.getElementById('editModal'));
+        editModal.show();
+        
     });
-</script>
+    
+      
+    });
+    </script>
+    
 {% endblock %}
 
